--- a/resources/scss/ceres/views/Category/_category-list-controls.scss
+++ b/resources/scss/ceres/views/Category/_category-list-controls.scss
@@ -57,7 +57,9 @@
         z-index: 1050;
         width: 100%;
         margin-left: -15px;
+        padding-right: 15px;
         top: 100%;
+
         .page-content {
             background: $white;
             padding: 2em !important;
