Set contrast threshold

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -56,6 +56,8 @@ $danger:                    $brand-danger !default;
 $light:                     $gray-100 !default;
 $dark:                      $gray-800 !default;
 
+$yiq-contrasted-threshold:  186 !default;
+
 //
 // Fonts
 //
