FIX background for megamenu

--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -229,6 +229,10 @@ body.menu-is-visible {
 							text-decoration : none;
 						}
 
+						.megamenu &:hover {
+							background: none;
+						}
+
 						>a {
 							width:100%;
 						}
