--- a/resources/css/ceres-legacy.scss
+++ b/resources/css/ceres-legacy.scss
@@ -12836,6 +12836,7 @@ $border-width: 1px;
 {
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
+    cursor: pointer;
 
     &.error
     {
@@ -14019,6 +14020,10 @@ body.menu-is-visible {
 							background  	: $menu-big-menu-li-bg-hover;
 							color 			: $menu-big-menu-li-color;
 							text-decoration : none;
+						}
+
+						.megamenu &:hover {
+							background: none;
 						}
 
 						>a {
@@ -17900,7 +17905,6 @@ html.ie .basket-preview-hover {
 
                     .form-check-label {
                         padding: 0.5rem 0;
-                        padding-left: 0;
                         color: $gray-dark;
                         display: block;
                         -webkit-transition: all 0.1s ease;
