--- a/resources/views/ItemList/Components/ItemStoreSpecial.twig
+++ b/resources/views/ItemList/Components/ItemStoreSpecial.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-item-store-special">
     <div class="special-tags" v-show="label.length || bundleType === 'bundle'">
-        <span v-if="storeSpecial.id > 0" class="badge" v-bind:class="tagClass">
+        <span v-if="label.length" class="badge" v-bind:class="tagClass">
             ${ label }
         </span>
         <span v-else class="badge badge-bundle bg-info">
