--- a/resources/scss/ceres/forms/_inputs.scss
+++ b/resources/scss/ceres/forms/_inputs.scss
@@ -296,7 +296,8 @@ $border-width: 1px;
     }
 }
 
-.form-check-label
+
+.form-check
 {
     transition: all .3s ease;
     cursor: pointer;
@@ -324,4 +325,3 @@ $border-width: 1px;
         }
     }
 }
-
