--- a/resources/views/Checkout/Components/AcceptGtcCheck.twig
+++ b/resources/views/Checkout/Components/AcceptGtcCheck.twig
@@ -1,25 +1,28 @@
 <script type="x/template" id="vue-accept-gtc-check">
-    <label class="form-check-label custom-control" for="gtc-accept" v-bind:class="{ 'error': showError }">
+    <div class="form-check" v-bind:class="{ 'error': showError }">
         <input class="form-check-input" type="checkbox" value="" id="gtc-accept" v-model="isChecked">
-        {% autoescape false %}
-            {% set gtcContent %}<!--
+
+        <label class="form-check-label" for="gtc-accept">
+            {% autoescape false %}
+                {% set gtcContent %}<!--
                 --><a href="{{ urls.gtc }}" target="_blank">
                     <span>{{ trans("Ceres::Template.checkoutGtc") }}</span>
                 </a><!--
             -->{% endset %}
-            {% set cancellationContent %}<!--
+                {% set cancellationContent %}<!--
                 --><a href="{{ urls.cancellationRights }}" target="_blank">
                     <strong>{{ trans("Ceres::Template.checkoutCancellationRight", {"hyphen": "&shy;"}) }}</strong>
                 </a><!--
             -->{% endset %}
 
-            {% set policyContent %}<!--
+                {% set policyContent %}<!--
                 --><a href="{{ urls.privacyPolicy }}" target="_blank">
                     <span>{{ trans("Ceres::Template.checkoutPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
                 </a><!--
             -->{% endset %}
 
-            {{ trans("Ceres::Template.checkoutChooseOur", {"gtc": gtcContent, "cancellation": cancellationContent, "policy": policyContent}) }}
-        {% endautoescape %}
-    </label>
+                {{ trans("Ceres::Template.checkoutChooseOur", {"gtc": gtcContent, "cancellation": cancellationContent, "policy": policyContent}) }}
+            {% endautoescape %}
+        </label>
+    </div>
 </script>
