--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -92,10 +92,12 @@
 				</div>
 
 				<div class="col-12 col-md-9">
-					<label class="form-check-label custom-control">
-						<input class="form-check-input" type="checkbox" v-model="cc" value="cc" name="mailToMe">
-						{{ trans("Ceres::Template.contactSendMeACopy") }}
-					</label>
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" id="cc" v-model="cc" value="cc" name="mailToMe">
+						<label class="form-check-label" for="cc">
+							{{ trans("Ceres::Template.contactSendMeACopy") }}
+						</label>
+					</div>
 				</div>
 
 				<div class="col-12">
