ADD build files

--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -11707,6 +11707,7 @@ Custom classes
     text-align:left;
     &.right {
       text-align:right;
+      right: 0;
       .owl-single-item-control {
         right: 0;
       }
@@ -12832,7 +12833,8 @@ $border-width: 1px;
     }
 }
 
-.form-check-label
+
+.form-check
 {
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
@@ -12862,7 +12864,6 @@ $border-width: 1px;
         }
     }
 }
-
 
 
 // Page Design / Global components
@@ -16482,24 +16483,6 @@ html.ie .basket-preview-hover {
 
 	textarea:focus{
 		border-color: rgba(0,0,0,.15);
-	}
-
-	.form-check-label {
-		&.error {
-			background: $danger !important;
-			color: $white !important;
-			border-radius: .1rem;
-			-webkit-transition: all .3s ease;
-			transition: all .3s ease;
-			padding: .5em 1.75rem;
-
-			a {
-				color: $white;
-				&:hover {
-					color: $gray-lighter2;
-				}
-			}
-		}
 	}
 
 	.contact-card{
