remove appearance config

--- a/resources/views/Widgets/Common/CollapseWidget.twig
+++ b/resources/views/Widgets/Common/CollapseWidget.twig
@@ -7,7 +7,7 @@
 {% endfor %}
 
 {% if renderContent %}
-    <div class="widget accordion widget-{{ widget.settings.appearance.mobile | default('primary')  }}" id="accordion_{{ collapseId }}">
+    <div class="widget accordion" id="accordion_{{ collapseId }}">
         {% for collapseBox in collapseBoxes %}
         <div class="card">
           <div class="card-header" id="heading_{{ collapseId }}_{{ loop.index }}">
